sumo/tests/duarouter/alternatives/style2_input/errors/xml/missing_element_begin/errors.duarouter
Error: Expected end of tag 'vehicle'
 In file 'input_alts.rou.alt.xml'
 At line/column 13/6.

Quitting (on error).
